# sds-code

./: .env  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .rumdl.toml  AGENTS.md  README.md  WCAG_2.2_AA_Compliance_Report.md  base.html  biome.json  components.html  contributing.md  federation-shared.example.env  forms.html  layout.html  sds-code.code-workspace  sds.code-workspace
federation/: .gitignore  Dockerfile  compose.local.yaml  compose.production.yaml  compose.yaml  federation.example.toml  federation.toml  justfile  pyproject.toml
federation/.envs/example/: sync.env
federation/certs/: .gitignore
federation/scripts/: env-selection.sh  generate-dev-certs.sh  simulate_redis_event.py
federation/sds_federation/: main.py  models.py
federation/sds_federation/routes/: health.py  webhooks.py
federation/sds_federation/schemas/: webhooks.py
federation/sds_federation/services/: bootstrap.py  fed_index.py  fed_search.py  local_events.py  operational.py  peer_registry.py  peer_sync.py  redis_channel.py
federation/sds_federation/testing/: __init__.py  sample_data.py
federation/tests/: conftest.py  test_integration_bootstrap.py  test_integration_mesh.py  test_integration_pipeline.py  test_integration_webhooks.py  test_operational.py  test_redis_event_pipeline.py  test_regression_fed_search.py  test_regression_indexer.py  test_regression_peer_sync.py  test_regression_redis_channel.py  test_regression_schemas.py
federation/tests/support/: federation_mesh.py  gateway_export_mock.py  mock_opensearch.py  mock_peer_registry.py
gateway/: .dockerignore  .editorconfig  .fallowrc.json  .gitignore  .readthedocs.yaml  JUPYTERHUB_SETUP.md  LICENSE  POST_PROCESSING_ARCHITECTURE.md  README.md  WATERFALL_PROCESSING.md  biome.jsonc  compose.ci.yaml  compose.docs.yaml  compose.local.jupyter.yml  compose.local.yaml  compose.production.yaml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  jest.config.js  jest.setup.js  justfile  makefile  manage.py  merge_production_dotenvs_in_dotenv.py  opensearch.local.yaml  opensearch.production.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  version.json
gateway/.devcontainer/: devcontainer.json
gateway/.envs/example/: django.env  django.env-prod-example  django.prod-example.env  minio.env  opensearch.env  postgres.env  sfs.env  storage.env  storage.prod.env
gateway/.envs/production/: jupyterhub.env.example
gateway/.github/: dependabot.yml
gateway/.github/workflows/: ci.yml
gateway/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
gateway/config/settings/: base.py  local.py  logs.py  production.py  test.py  utils.py
gateway/docs/: changelog.md  conf.py  detailed-deploy.md  dev-notes.md  github-actions-ephemeral-env.md  howto.rst  index.rst  jupyterhub-production-setup.md  make.bat  migration-minio-to-seaweedfs.md  users.rst
gateway/locale/: README.md
gateway/opensearch/: generate_certs.sh
gateway/requirements/: base.txt  local.txt
gateway/scripts/: .env.sh.example  .gitignore  benchmark-disks.sh  common.sh  create-snapshot.sh  deploy-just-help.sh  deploy.sh  diagnose_metadata_files.py  env-checker.sh  env-selection.sh  fallow-cross-file-dupes.sh  fallow-static-js-dead-code.cjs  generate-secrets.sh  prod-hostnames.env  prod-hostnames.env.bak  prod-hostnames.example.env  restore-snapshot.sh  setup-prod-hostnames.sh  update-version-json.sh
gateway/sds_gateway/: apps.py  conftest.py  context_processors.py  middleware.py  test_context_processors.py  test_middleware.py  test_settings.py
gateway/sds_gateway/api_methods/: __init__.py  admin.py  apps.py  authentication.py  cog_pipelines.py  models.py  permissions.py  schema.py  tasks.py  tests.py  throttling.py  views.py
gateway/sds_gateway/monitoring/: admin.py  apps.py  models.py  services.py  tasks.py
gateway/sds_gateway/templates/: 403.html  404.html  500.html  base.html  swagger-ui.html  upload_modal.html
gateway/sds_gateway/users/: adapters.py  admin.py  apps.py  backend_service_key_utils.py  context_processors.py  file_utils.py  files_utils.py  forms.py  h5_service.py  h5_utils.py  html_utils.py  item_models.py  managers.py  mixins.py  models.py  navigation_models.py  svi_utils.py  tasks.py  urls.py  utils.py  validators.py  views.py  views_deprecated.py
gateway/sds_gateway/visualizations/: README.md  __init__.py  admin.py  api_views.py  apps.py  cog_pipelines.py  config.py  errors.py  models.py  post_processing.py  serializers.py  urls.py  views.py
gateway/tests/: __init__.py  test_brand_image_url.py
gateway/webpack/: common.config.js  dev.config.js  prod.config.js
sdk/: .env.example  .gitignore  README.md  compose.yaml  hello.py  justfile  makefile  pyproject.toml  tox.ini  usage.py
sdk/config/: secrets.env.example
sdk/config/nginx/: nginx.conf
sdk/docs/: .markdownlintignore  README.md  changelog.md  dev-notes.md  features.md  mkdocs.yaml  release-checklist.md  usage-guide.md
sdk/docs/examples/: basic_usage.py
sdk/docs/mkdocs/: changelog.md  client.md  common-workflows.md  faq.md  getting-started.md  index.md  terminology.md
sdk/scripts/: demo_progress_bars.py
sdk/spectrumx/: pyproject.toml
sdk/src/spectrumx/: __init__.py  client.py  config.py  errors.py  gateway.py  models.py  utils.py
sdk/tests/: .gitignore  conftest.py  test-refactor-progress.md  test_capture_pagination.py  test_client.py  test_config.py  test_errors.py  test_gateway.py  test_models.py  test_network.py  test_structured_logging.py  test_uploads.py  test_uploads_persistence.py  test_uploads_workflow.py  test_usage.py  test_utils.py  test_version.py
sdk/tests/e2e_examples/: check_build_acceptance.py  test_build_acceptance.py  test_user_readme.py
sdk/tests/integration/: conftest.py  integration.env.example  test_auth.py  test_captures.py  test_datasets.py  test_file_ops.py
sdk/tests/models/: test_base.py  test_datasets.py  test_enums.py  test_files.py  test_path.py  test_permission.py  test_user.py
sdk/tests/ops/: test_captures.py  (+4 more)
(+824 files in other folders)
